Add for loop notes

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Arrays and Objects</title>
 </head>
 <body>
-    <script src = "arraysAndObjects.js"></script>
+    <script src = "app.js"></script>
 </body>
 </html>
