--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Arrays and Objects</title>
 </head>
 <body>
+    <button>Don't click me!</button>
     <script src = "functions.js"></script>
 </body>
 </html>
