Add object method notes

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <button>Don't click me!</button>
-    <script src = "functions.js"></script>
+    <script src = "arraysAndObjects.js"></script>
 </body>
 </html>
