Add first web page example

--- a/index.html
+++ b/index.html
@@ -4,9 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arrays and Objects</title>
+    <link rel="stylesheet" href="app.css">
 </head>
 <body>
-    <button>Don't click me!</button>
+    <h1>My Webpage</h1>
+    <button>Click me!</button>
     <script src = "functions.js"></script>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex tempore assumenda dolor quaerat praesentium ducimus quae temporibus harum omnis? Ipsa atque recusandae repellat vero perspiciatis officiis reiciendis sint id earum?</p>
+    <form action="">
+        <input type="text" placeholder="What's your favorite constellation?"?>
+        <input type="checkbox" name="check" value="Click">Click
+    </form>
+    <ul>
+        <li class="special">Special first item of an unordered list.</li>
+        <li>Second item</li>
+        <li>A regularly sized image in an unordered list<img id="galaxy-photo" src="https://plus.unsplash.com/premium_photo-1728037068190-15a5bd1d6573?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+        alt="An image of a person looking up at a galaxy"</li>
+    </ul>
+
+
 </body>
 </html>
