--- a/index.html
+++ b/index.html
@@ -16,11 +16,19 @@
         <input type="checkbox" name="check" value="Click">Click
     </form>
     <ul>
+        <a href="http://www.google.com">Link to Google</a>
         <li class="special">Special first item of an unordered list.</li>
         <li>Second item</li>
         <li>A regularly sized image in an unordered list<img id="galaxy-photo" src="https://plus.unsplash.com/premium_photo-1728037068190-15a5bd1d6573?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
         alt="An image of a person looking up at a galaxy"</li>
     </ul>
+    <section>
+        <ul>
+            <li>Carrots</li>
+            <li class="special">Broccoli</li>
+            <li>Bok choy</li>
+        </ul>
+    </section>
 
 
 </body>
