Add style alteration notes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 <body>
     <h1>My Webpage</h1>
     <button>Click me!</button>
-    <script src = "functions.js"></script>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex tempore assumenda dolor quaerat praesentium ducimus quae temporibus harum omnis? Ipsa atque recusandae repellat vero perspiciatis officiis reiciendis sint id earum?</p>
     <form action="">
         <input type="text" placeholder="What's your favorite constellation?"?>
@@ -30,6 +29,6 @@
         </ul>
     </section>
 
-
+    <script src = "theDom.js"></script>
 </body>
 </html>
