Add class manipulation notes

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
         <input type="text" placeholder="What's your favorite constellation?"?>
         <input type="checkbox" name="check" value="Click">Click
     </form>
+    <ul id="todos">
+        <li class="todo">Create video on higher order functions <button>X</button></li>
+        <li class="todo">6 hours of Udemy <button>X</button></li>
+        <li class="todo">Finish lesson 1 on Shaye Howe <button>X</button></li>
+    </ul>
     <ul>
         <a href="http://www.google.com">Link to Google</a>
         <li class="special">Special first item of an unordered list.</li>
