Add object methods and higher order function to weekly video file

--- a/index2.html
+++ b/index2.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src = "weeklyVideos.js"></script>
+    <script src = "weeklyVideo.js"></script>
 </body>
 </html>
