--- a/index.html
+++ b/index.html
@@ -14,20 +14,40 @@
     spreads your JS and CSS all over the place-->
     <button id="clicker">Clicker</button>
     <button id="impossible">Try to click me</button>
+    
+    <form id="signup">
+        <input name="creditCard" type="text" placeholder="credit card number" id="cc">
+        <label>
+            I agree to sell my soul to your company
+            <input name="agreeToTerms" type="checkbox" id="terms">
+        </label>
+        <select name="selectedVeggie" id="veggie">
+            <option value="eggplant">Eggplant</option>
+            <option value="asparagus">Asparagus</option>
+            <option value="carrot">Carrot</option>
+        </select>
+        <input type="submit">
+    </form>
+
     <form action="">
         <input type="range" min="10" max="50">
     </form>
+
     <input id="username" placeholder="username" typer="text">
+
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex tempore assumenda dolor quaerat praesentium ducimus quae temporibus harum omnis? Ipsa atque recusandae repellat vero perspiciatis officiis reiciendis sint id earum?</p>
+    
     <form action="">
-        <input type="text" placeholder="What's your favorite constellation?"?>
+        <input type="text" placeholder="What's your favorite constellation?">
         <input type="checkbox" name="check" value="Click">Click
     </form>
+
     <ul id="todos">
         <li class="todo">Create video on higher order functions <button>X</button></li>
         <li class="todo">6 hours of Udemy <button>X</button></li>
         <li class="todo">Finish lesson 1 on Shaye Howe <button>X</button></li>
     </ul>
+
     <ul>
         <a href="http://www.google.com">Link to Google</a>
         <li class="special">Special first item of an unordered list.</li>
@@ -35,6 +55,7 @@
         <li>A regularly sized image in an unordered list <img id="galaxy-photo" src="https://plus.unsplash.com/premium_photo-1728037068190-15a5bd1d6573?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
         alt="An image of a person looking up at a galaxy"</li>
     </ul>
+
     <section>
         <h3>Shopping List</h3>
         <input type="text" id="addItem" placeholder="Enter an item">
