Add axios and fetch notes

--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
     <h1 id="color">Pick a color, any color!</h1>
     <section id="boxes"></section>
 
+    
+
+    <script src="https://unpkg.com/axios@1.6.7/dist/axios.min.js"></script>
     <script src = "theDom.js"></script>
 </body>
 </html>
