Add multiple awaits, sequential async functions, and parallel async functions notes

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <h1 id="color">Pick a color, any color!</h1>
     <section id="boxes"></section>
 
-    
+    <button id="await">Hi!</button>
 
     <script src="https://unpkg.com/axios@1.6.7/dist/axios.min.js"></script>
     <script src = "theDom.js"></script>
