Add while loop guessing game and update weeklyVideo files

--- a/weeklyVideoIndex.html
+++ b/weeklyVideoIndex.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weekly Video - classList</title>
+    <title>Weekly Video - async</title>
     <link rel="stylesheet" href="weeklyVideo.css">
 </head>
 <body>
+    <!--
     <h1>My To Do List</h1>
     <ul id="taskList">
         <li class="task"><button id="btn"></button>Create video on classList</li>
@@ -14,8 +15,9 @@
         <li class="task"><button id="btn"></button>Pick up groceries</li>
         <li class="task"><button id="btn"></button>Pack lunch for work</li>
     </ul>
+    -->
 
-
+    <script src="https://unpkg.com/axios@1.6.7/dist/axios.min.js"></script>
     <script src = "weeklyVideo.js"></script>
 </body>
 </html>
