Add a reset list option

--- a/todo.html
+++ b/todo.html
@@ -11,6 +11,7 @@
         <li>"new" - Add a todo item</li>
         <li>"list" - List all todos</li>
         <li>"delete" - Remove specific todo</li>
+        <li>"restart" - Remove all todos</li>
         <li>"quit" - Quit app</li>
     </ul>
     <button id="random">Change background color</button>
